# Speech-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/ai/memory/: service.py
apps/backend/app/ai/prompts/: system_prompt.py
apps/backend/tests/: fakes.py
apps/backend/tests/ai/conversation/: test_service.py
apps/frontend/: package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
docker/: README.md
docs/: architecture.md  decisions.md  dev-log.md  roadmap.md  vision.md
docs/core/: decision_engine.md
docs/digital_employee/: epishura_dealer_agent.md
infrastructure/: README.md
knowledge/: README.md
prompts/: README.md
