[project]
name = "voiceflow-ai-backend"
version = "0.1.0"
description = "FastAPI backend for AI Voice Sales Manager."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "openai>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
